<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/iconship" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cage"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalprice"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalprice"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtIDS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ID"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtWoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weight of Cage"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtTotalprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Price"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtNoinday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Number in day"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtTotalpig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Pig"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Price"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtStatusS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnchangeS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/_danhsach"
            android:background="@color/hong"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btneditS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/_sua"
            android:background="@color/hong"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btndeleteS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/_het"
            android:background="@color/hong"
            android:scaleType="centerInside"/>
    </LinearLayout>
</LinearLayout>