<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/listpig_row_scene" >

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            app:srcCompat="@drawable/_800591" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tripid "
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pignum"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtshipid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ship ID"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txtpigno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pig No"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txtweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weight"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txtstatusP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btneditP"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:background="@color/hong"
                    android:src="@drawable/_sua" />

                <ImageButton
                    android:id="@+id/btnkilled"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/_dagiet"
                    android:background="@color/hong"
                    android:scaleType="centerInside"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>